--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
     <meta charset="UTF-8"/>
-    <title>Title</title>
+    <title>Spring MVC Learning</title>
+    <link href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css"
+          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"
+          rel="stylesheet" media="screen"/>
+    <script src="/webjars/jquery/3.2.0/jquery.min.js"
+            th:src="@{/webjars/jquery/3.2.0/jquery.min.js}"></script>
 </head>
 <body>
-<h1>Hello World</h1>
+<div class="container">
 
-<h2>This is my Thymeleaf index page. This is my change.</h2>
+    <h1>Hello World</h1>
+
+    <h2>This is my Thymeleaf index page. This is my change.</h2>
+</div>
 
 </body>
 </html>
