--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
           rel="stylesheet" media="screen"/>
     <script src="/webjars/jquery/3.2.0/jquery.min.js"
             th:src="@{/webjars/jquery/3.2.0/jquery.min.js}"></script>
+    <link href="../static/css/style.css"
+          th:href="@{css/style.css}" rel="stylesheet" media="screen"/>
 </head>
 <body>
 <div class="container">
