--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -22,6 +22,7 @@
                 <th>Description</th>
                 <th>Price</th>
                 <th>Image URL</th>
+                <th>List</th>
             </tr>
             </thead>
             <tbody>
@@ -30,6 +31,7 @@
                 <td th:text="${product.description}"></td>
                 <td th:text="${product.price}"></td>
                 <td th:text="${product.imageUrl}"></td>
+                <td><a th:href="${'/product/' + product.id}">View</a></td>
             </tr>
             </tbody>
         </table>
