--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -23,6 +23,7 @@
                 <th>Price</th>
                 <th>Image URL</th>
                 <th>List</th>
+                <th>Edit</th>
             </tr>
             </thead>
             <tbody>
@@ -32,6 +33,7 @@
                 <td th:text="${product.price}"></td>
                 <td th:text="${product.imageUrl}"></td>
                 <td><a th:href="${'/product/' + product.id}">View</a></td>
+                <td><a th:href="${'/product/edit/' + product.id}">Edit</a></td>
             </tr>
             </tbody>
         </table>
