--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -24,6 +24,7 @@
                 <th>Image URL</th>
                 <th>List</th>
                 <th>Edit</th>
+                <th>Delete</th>
             </tr>
             </thead>
             <tbody>
@@ -34,6 +35,7 @@
                 <td th:text="${product.imageUrl}"></td>
                 <td><a th:href="${'/product/' + product.id}">View</a></td>
                 <td><a th:href="${'/product/edit/' + product.id}">Edit</a></td>
+                <td><a th:href="${'/product/delete/' + product.id}">Delete</a></td>
             </tr>
             </tbody>
         </table>
