--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,11 @@
 
     <h1>Hello World</h1>
 
-    <h2>This is my Thymeleaf index page. This is my change.</h2>
+    <h2>This is my Thymeleaf index page.</h2>
+    <ul>
+        <li><a th:href="${'/product/list'}">Products list</a></li>
+        <li><a th:href="${'/customer/list'}">Customers list</a></li>
+    </ul>
 </div>
 
 </body>
