--- a/src/main/resources/templates/product/show.html
+++ b/src/main/resources/templates/product/show.html
@@ -8,7 +8,7 @@
           rel="stylesheet" media="screen"/>
     <script src="/webjars/jquery/3.2.0/jquery.min.js"
             th:src="@{/webjars/jquery/3.2.0/jquery.min.js}"></script>
-    <link href="../static/css/style.css"
+    <link href="../../static/css/style.css"
           th:href="@{css/style.css}" rel="stylesheet" media="screen"/>
 </head>
 <body>
@@ -47,6 +47,9 @@
                 </div>
             </form>
         </div>
+    </div>
+    <div class="row">
+        <a th:href="${'/product/list'}">Back to Products list</a>
     </div>
 </div>
 
