--- a/src/main/resources/templates/customer/form.html
+++ b/src/main/resources/templates/customer/form.html
@@ -49,25 +49,25 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Addres Line One:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{addressLineOne}"/>
+                    <input type="text" class="form-control" th:field="*{billingAddress.addressLineOne}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Addres Line Two:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{addressLineTwo}"/>
+                    <input type="text" class="form-control" th:field="*{billingAddress.addressLineTwo}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">City:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{city}"/>
+                    <input type="text" class="form-control" th:field="*{billingAddress.city}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Zip Code:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{zipCode}"/>
+                    <input type="text" class="form-control" th:field="*{billingAddress.zipCode}"/>
                 </div>
             </div>
             <div class="row">
