--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -39,10 +39,10 @@
                 <td th:text="${customer.lastName}"></td>
                 <td th:text="${customer.email}"></td>
                 <td th:text="${customer.phoneNumber}"></td>
-                <td th:text="${customer.addressLineOne}"></td>
-                <td th:text="${customer.addressLineTwo}"></td>
-                <td th:text="${customer.city}"></td>
-                <td th:text="${customer.zipCode}"></td>
+                <td th:text="${customer.billingAddress.addressLineOne}"></td>
+                <td th:text="${customer.billingAddress.addressLineTwo}"></td>
+                <td th:text="${customer.billingAddress.city}"></td>
+                <td th:text="${customer.billingAddress.zipCode}"></td>
                 <td><a th:href="${'/customer/show/' + customer.id}">View</a></td>
                 <td><a th:href="${'/customer/edit/' + customer.id}">Edit</a></td>
                 <td><a th:href="${'/customer/delete/' + customer.id}">Delete</a></td>
