--- a/src/main/resources/templates/customer/show.html
+++ b/src/main/resources/templates/customer/show.html
@@ -36,7 +36,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Last Name:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${customer.lastName}">First Name</p>
+                        <p class="form-control-static" th:text="${customer.lastName}">Last Name</p>
                     </div>
                 </div>
                 <div class="form-group">
@@ -54,13 +54,15 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Address Line One:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${customer.billingAddress.addressLineOne}">Address Line One</p>
+                        <p class="form-control-static" th:text="${customer.billingAddress.addressLineOne}">Address Line
+                            One</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Address Line Two:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${customer.billingAddress.addressLineTwo}">Address Line Two</p>
+                        <p class="form-control-static" th:text="${customer.billingAddress.addressLineTwo}">Address Line
+                            Two</p>
                     </div>
                 </div>
                 <div class="form-group">
