--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,7 @@
     <ul>
         <li><a th:href="${'/product/list'}">Products list</a></li>
         <li><a th:href="${'/customer/list'}">Customers list</a></li>
+        <li><a th:href="${'/user/list'}">Customers list</a></li>
     </ul>
 </div>
 
