--- a/src/main/resources/templates/customer/form.html
+++ b/src/main/resources/templates/customer/form.html
@@ -20,8 +20,28 @@
     </div>
     <div class="row">
         <form class="form-horizontal" th:object="${customer}" th:action="@{/customer}" method="post">
-            <input type="hidden" th:field="*{id}"/>
-            <input type="hidden" th:field="*{version}"/>
+            <input type="hidden" th:field="*{userId}"/>
+            <input type="hidden" th:field="*{userVersion}"/>
+            <input type="hidden" th:field="*{customerId}"/>
+            <input type="hidden" th:field="*{customerVersion}"/>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Username:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{username}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Password:</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" th:field="*{passwordText}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Password conf.:</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" th:field="*{passwordTextConfirm}"/>
+                </div>
+            </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">First Name:</label>
                 <div class="col-sm-10">
@@ -46,30 +66,30 @@
                     <input type="text" class="form-control" th:field="*{phoneNumber}"/>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Addres Line One:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{billingAddress.addressLineOne}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Addres Line Two:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{billingAddress.addressLineTwo}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">City:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{billingAddress.city}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Zip Code:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{billingAddress.zipCode}"/>
-                </div>
-            </div>
+            <!--<div class="form-group">-->
+            <!--<label class="col-sm-2 control-label">Addres Line One:</label>-->
+            <!--<div class="col-sm-10">-->
+            <!--<input type="text" class="form-control" th:field="*{billingAddress.addressLineOne}"/>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="form-group">-->
+            <!--<label class="col-sm-2 control-label">Addres Line Two:</label>-->
+            <!--<div class="col-sm-10">-->
+            <!--<input type="text" class="form-control" th:field="*{billingAddress.addressLineTwo}"/>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="form-group">-->
+            <!--<label class="col-sm-2 control-label">City:</label>-->
+            <!--<div class="col-sm-10">-->
+            <!--<input type="text" class="form-control" th:field="*{billingAddress.city}"/>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="form-group">-->
+            <!--<label class="col-sm-2 control-label">Zip Code:</label>-->
+            <!--<div class="col-sm-10">-->
+            <!--<input type="text" class="form-control" th:field="*{billingAddress.zipCode}"/>-->
+            <!--</div>-->
+            <!--</div>-->
             <div class="row">
                 <button type="submit" class="btn btn-default">Submit</button>
             </div>
