--- a/src/main/resources/templates/customer/show.html
+++ b/src/main/resources/templates/customer/show.html
@@ -54,27 +54,27 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Address Line One:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${customer.billingAddress.addressLineOne}">Address Line
+                        <p class="form-control-static" th:text="${customer.billingAddress?.addressLineOne}">Address Line
                             One</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Address Line Two:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${customer.billingAddress.addressLineTwo}">Address Line
+                        <p class="form-control-static" th:text="${customer.billingAddress?.addressLineTwo}">Address Line
                             Two</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">City:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${customer.billingAddress.city}">City</p>
+                        <p class="form-control-static" th:text="${customer.billingAddress?.city}">City</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Zip Code:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${customer.billingAddress.zipCode}">Zip Code</p>
+                        <p class="form-control-static" th:text="${customer.billingAddress?.zipCode}">Zip Code</p>
                     </div>
                 </div>
             </form>
